--- a/.config/i3/config
+++ b/.config/i3/config
@@ -67,7 +67,7 @@ set $w8 8:Music
 
 # I wish I had 6
 set $monitor1 LVDS-1
-set $monitor2 VGA-1
+set $monitor2 HDMI-3
 
 workspace $w1 output $monitor1
 workspace $w2 output $monitor1
@@ -224,7 +224,7 @@ colors {
 }
 
 bar {
-	output VGA-1
+	output HDMI-3
 	tray_output primary
 	status_command /home/fuzzbox/.local/bin/i3/i3status_custom_bar
 	font pango:FontAwesome, Ubuntu Medium 8
@@ -264,6 +264,7 @@ mode "$mode_launcher" {
 # Keyboard shortcuts
 
 bindsym $mod+m exec --no-startup-id urxvt -e ranger
+bindsym $mod+u exec --no-startup-id edex
 
 # dmenu as app launcher
 
@@ -313,7 +314,7 @@ exec --no-startup-id udiskie --no-tray
 exec --no-startup-id wal -R
 exec --no-startup-id dockd --daemon
 exec --no-startup-id /home/fuzzbox/.local/bin/system/create_env_vars.sh
-exec --no-startup-id compton --vsync opengl --backend glx --paint-on-overlay -c -l 1 -t 1 -o 0.5 -r 5 -f --opacity-rule "95:class_g = 'URxvt'" --opacity-rule "90:class_g = 'dmenu'" --opacity-rule "90:class_g = 'i3bar'" -e 1.0 -i 1.0 -D 6 --xinerama-shadow-crop -C -z
+exec --no-startup-id compton --vsync opengl --backend glx --paint-on-overlay -c -l 1 -t 1 -o 0.5 -r 5 -f --opacity-rule "95:class_g = 'URxvt'" --opacity-rule "95:class_g = 'dmenu'" --opacity-rule "95:class_g = 'i3bar'" -e 1.0 -i 1.0 -D 6 --xinerama-shadow-crop -C -z
 # exec --no-startup-id nm-applet
 exec --no-startup-id xautolock -corners 000- -cornersize 30 -time 10 -locker /home/fuzzbox/.local/bin/i3/i3lock_custom
 # exec --no-startup-id mopidy -q
