--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -291,29 +291,29 @@ map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
 
 map wd1 shell wal -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wdo1 shell wal -g -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wdo1 shell wal -i %f && sedwpg wal false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 map wl1 shell wal -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wlo1 shell wal -g -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wlo1 shell wal -l -i %f && sedwpg wal true && wpg -a %f && wpg --light --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 
 map wd2 shell wal --backend colorz -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wdo2 shell wal --backend colorz -g -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wdo2 shell wal --backend colorz -i %f && sedwpg colorz false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 map wl2 shell wal --backend colorz -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wlo2 shell wal --backend colorz -g -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wlo2 shell wal --backend colorz -l -i %f && sedwpg colorz true && wpg -a %f && wpg --light --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 
 map wd3 shell wal --backend haishoku -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wdo3 shell wal --backend haishoku -g -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wdo3 shell wal --backend haishoku -i %f && sedwpg haishoku false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 map wl3 shell wal --backend haishoku -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wlo3 shell wal --backend haishoku -g -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wlo3 shell wal --backend haishoku -l -i %f && sedwpg haishoku true && wpg -a %f && wpg --light --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 
 map wd4 shell wal --backend colorthief -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wdo4 shell wal --backend colorthief -g -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wdo4 shell wal --backend colorthief -i %f && sedwpg colorthief false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 map wl4 shell wal --backend colorthief -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wlo4 shell wal --backend colorthief -g -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wlo4 shell wal --backend colorthief -l -i %f && sedwpg colorthief true && wpg -a %f && wpg --light --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 
 map wd5 shell wal --backend schemer2 -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wdo5 shell wal --backend schemer2 -g -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wdo5 shell wal --backend schemer2 -i %f && sedwpg schemer2 false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 map wl5 shell wal --backend schemer2 -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
-map wlo5 shell wal --backend schemer2 -g -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
+map wlo5 shell wal --backend schemer2 -l -i %f && sedwpg schemer2 true && wpg -a %f && wpg --light --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.local/bin/system/wal_dunst.sh
 
 # map bc shell wal -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.bin/wmwal.sh
 # map bb shell wal -l -i %f && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && /home/fuzzbox/.bin/wmwal.sh
