--- a/.config/i3/config
+++ b/.config/i3/config
@@ -298,6 +298,7 @@ bindsym XF86AudioPlay exec --no-startup-id mpc toggle
 bindsym XF86AudioNext exec --no-startup-id mpc next && killall -USR1 i3status
 bindsym XF86AudioPrev exec --no-startup-id mpc prev && killall -USR1 i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute 1 toggle
 
 # Brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id /home/fuzzbox/.local/bin/system/thinkpad-backlight.sh down
