New script to manage pywal et wpgtk colorscheme from ranger or sxiv of cli

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -290,7 +290,9 @@ map uv      mark_files all=True val=False
 map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
 
-map wd1 shell wal -i %f && wal_wpgtk wal false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && wal_dunst
+map yw shell dmenu-wal %f
+
+map wd1 shell wal -i %f && wal_wpgtk wal false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && wal_dunst 
 map wl1 shell wal -l -i %f && wal_wpgtk wal true && wpg -a %f && wpg --light --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && wal_dunst
 
 map wd2 shell wal --backend colorz -i %f && wal_wpgtk colorz false && wpg -a %f && wpg --backend -n -s %f && wal -R && cp %f ~/Images/Current/wall.jpg && sassc /home/fuzzbox/.startpage/scss/style.scss /home/fuzzbox/.startpage/style.css && wal_dunst
