ncmpcpp, nvim scripts and dmenu updates

--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -8,10 +8,10 @@ colors_enabled = "yes"
 user_interface = "alternative"
 follow_now_playing_lyrics = "yes"
 fetch_lyrics_for_current_song_in_background = "yes"
-song_columns_list_format = "(25)[]{a}(40)[white]{t|f}(7f)[cyan]{l}"
+song_columns_list_format = "(35)[]{a}(40)[white]{t|f}"
 
 header_visibility = "no"
-titles_visibility = "yes"
+titles_visibility = "no"
 progressbar_look = "━━━"
 #progressbar_look = "───"
 progressbar_color = "red"
