dmenu customization now from config.def.h; new dmenu-yt script

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -19,6 +19,7 @@ corner-radius = 8.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'Dunst'",
+  "class_g = 'st-256color'",
   "class_g = 'URxvt'",
   "class_g = 'Gimp'",
   "class_g = 'libreoffice'",
