--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -368,6 +368,12 @@ map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
 
+map gD cd ~/Documents
+map gW cd ~/Images/Wallpapers
+map gI cd ~/Images
+map gB cd ~/.local/bin
+map gS cd ~/.suckless
+
 # External Programs
 map E  edit
 map du shell -p du --max-depth=1 -h --apparent-size
