Add surf and tabbed

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -19,14 +19,15 @@ corner-radius = 8.0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'Dunst'",
-  "class_g = 'st-256color'",
   "class_g = 'URxvt'",
+  "class_g = 'st-256color'",
   "class_g = 'Gimp'",
   "class_g = 'libreoffice'",
   "class_g = 'libreoffice-startcenter'",
   "class_g = 'libreoffice-calc'",
   "class_g = 'libreoffice-writer'",
   "class_g = 'firefox'",
+  "class_g = 'tabbed'",
   "class_g = 'dwm'",
 ];
 round-borders = 1;
