--- a/.muttrc
+++ b/.muttrc
@@ -10,9 +10,24 @@ set folder=~/.mutt
 set header_cache = "~/.cache/mutt"
 set message_cachedir = "~/.cache/mutt"
 
-mailboxes "~/.mutt/pro/inbox"
-mailboxes "~/.mutt/perso/inbox"
-mailboxes "~/.mutt/gmail/inbox"
+set sidebar_visible
+set sidebar_format = "%B%?F? [%F]?%* %?N?%N/?%S"
+set mail_check_stats
+
+set sidebar_sort_method = alpha
+
+set sidebar_short_path
+# Shorten mailbox names
+#set sidebar_delim_chars="/"
+# Delete everything up to the last / character
+#set sidebar_folder_indent
+# Indent folders whose names we've shortened
+#set sidebar_indent_string="  "
+# Indent with two spaces
+# 
+mailboxes "~/.mutt/pro/pro"
+mailboxes "~/.mutt/perso/perso"
+mailboxes "~/.mutt/gmail/gmail"
 
 #set spoolfile = "+INBOX"
 #named-mailboxes "Pro" ="pro/inbox"
@@ -26,7 +41,7 @@ folder-hook ~/.mutt/pro/ 'source ~/.mutt/pro.conf'
 folder-hook ~/.mutt/perso/ 'source ~/.mutt/perso.conf'
 folder-hook ~/.mutt/gmail/ 'source ~/.mutt/gmail.conf'
 
-set mailcap_path=~/.local/etc/mailcap
+set mailcap_path=~/.mutt/mailcap
 
 #set alias_file=~/.config/mutt/mutt-aliases
 
