Clean bloated .local/bin and get rid of udiskie

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,7 +10,6 @@ transition-pow-w = 0.1
 transition-pow-h = 0.1
 size-transition = true
 
-
 #################################
 #             Corners           #
 #################################
@@ -38,7 +37,6 @@ round-borders-exclude = [
 #             Shadows           #
 #################################
 
-
 # Enabled client-side shadows on windows. Note desktop windows 
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
@@ -48,17 +46,14 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 shadow-radius = 12
-# shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-x = -15
 shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-# shadow-offset-y = -15
 shadow-offset-y = -7;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
@@ -97,6 +92,7 @@ shadow-offset-y = -7;
 #   shadow-exclude = "n:e:Notification";
 #
 # shadow-exclude = []
+#
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
@@ -113,11 +109,9 @@ shadow-exclude = [
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
 # xinerama-shadow-crop = false
 
-
 #################################
 #           Fading              #
 #################################
-
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
@@ -133,7 +127,7 @@ fade-in-step = 0.02;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 10
+fade-delta = 6
 
 # Specify a list of conditions of windows that should not be faded.
 # don't need this, we disable fading for all normal windows with wintypes: {}
@@ -147,20 +141,17 @@ fade-exclude = [
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
-
 #################################
 #   Transparency / Opacity      #
 #################################
 
-
 opacity = 1;
+
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 inactive-opacity = 1
-#inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 frame-opacity = 1.0
-# frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0 
@@ -170,16 +161,14 @@ frame-opacity = 1.0
 popup_menu = { opacity = 0.9; }
 dropdown_menu = { opacity = 0.9; }
 
-
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-# inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+inactive-dim = 0.1
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -200,31 +189,20 @@ focus-exclude = [
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = [
-  "100:class_g     = 'Bar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'Fcitx5'",
-  "100:class_g    = 'kitty'",
-  "100:class_g    = 'Zathura'",
-  "100:class_g     = 'Alacritty'",
-  "100:class_g     = 'Rofi'",
-  "100:class_g     = 'Emacs'",
-  "100:class_g     = 'Polybar'",
-  "100:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
-  "100:class_g     = 'TelegramDesktop'",
-  "100:class_g     = 'Joplin'",
-  "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
-];
 
+opacity-rule = [
+  "95:class_g    = 'URxvt'",
+  "100:class_g    = 'Zathura'",
+  "100:class_g     = 'Rofi'",
+  "100:class_g    = 'firefox'",
+  "95:class_g    = 'st-256color'",
+  "90:class_g    = 'dmenu'",
+  "95:class_g    = 'dwm'",
+];
 
 #################################
 #     Background-Blurring       #
 #################################
-
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = 
@@ -245,10 +223,8 @@ opacity-rule = [
 #
 # blur-background-frame = false;
 
-
 # Use fixed blur strength rather than adjusting according to window opacity.
 # blur-background-fixed = false;
-
 
 # Specify the blur convolution kernel, with the following format:
 # example:
@@ -283,7 +259,6 @@ blur-background-exclude = [
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
-
 #################################
 #       General Settings        #
 #################################
@@ -297,7 +272,6 @@ blur-background-exclude = [
 experimental-backends = true;
 backend = "glx";
 #backend = "xrender";
-
 
 # Enable/disable VSync.
 # vsync = false
@@ -313,24 +287,18 @@ vsync = true
 mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
 mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them 
 # shaped windows. The accuracy is not very high, unfortunately.
-#
-# detect-rounded-corners = false
 detect-rounded-corners = true;
 
 # Detect '_NET_WM_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_OPACITY' of client windows to frame windows.
-#
 detect-client-opacity = false
-#detect-client-opacity = true;
 
 # Specify refresh rate of the screen. If not specified or 0, picom will 
 # try detecting this with X RandR extension.
-#
 # refresh-rate = 60
 refresh-rate = 0
 
@@ -363,14 +331,12 @@ use-ewmh-active-win = false
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows 
 # in the same group focused at the same time.
 #
-# detect-transient = false
 detect-transient = true
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
 # detect-transient is enabled, too.
 #
-#detect-client-leader = false
 detect-client-leader = true
 
 # Resize damaged region by a specific number of pixels. 
