--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -26,7 +26,8 @@ rounded-corners-exclude = [
   "class_g = 'libreoffice-startcenter'",
   "class_g = 'libreoffice-calc'",
   "class_g = 'libreoffice-writer'",
-  "class_g = 'firefox'",
+  "class_g = 'Firefox'",
+  "class_g = 'Navigator'",
   "class_g = 'tabbed'",
   "class_g = 'dwm'",
 ];
@@ -196,6 +197,7 @@ opacity-rule = [
   "100:class_g    = 'Zathura'",
   "100:class_g     = 'Rofi'",
   "100:class_g    = 'firefox'",
+#  "80:class_g = 'St'",
 ];
 
 #################################
@@ -267,7 +269,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-experimental-backends = true;
+experimental-backends = false;
 backend = "glx";
 #backend = "xrender";
 
